--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
       <div class="buttons">
             <button id="verify">Verify!</button>
       </div>
-      <div class="results">
-      </div>
       <div>
         <h4>User Choice</h4>
         <p id="userChoice"></p>
+        <h4>Results</h4>
+        <div id="result"></div>
       </div>
-      <div id="result"></div>
+      
   </div>
 
   <!-- Link JQuery here -->
