--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h4>User Choice</h4>
         <p id="userChoice"></p>
         <h4>Results</h4>
-        <div id="result"></div>
+        <div id="results"></div>
       </div>
       
   </div>
